# FLET_EXAMPLES

./: .gitignore  README.md  pyproject.toml
Forms/: README.md  login_with_captcha.py
LRSQL/: main.py
LRSQL/flet_alchemy/: application.py  login.py  register.py
Trash/: t1_hello.py  t2_page_route.py
flet_l/: main.py  sign_in_form.py  testing.py
master_project/: main.py
master_project/pages/: __init__.py  login.py  signup.py  student_page.py  welcome.py
master_project/utils/: Customs.py  __init__.py  customs.py  sign_in_form.py
sources/: main.py  sign_in_form.py  snack_bar.py  test2.py  testing.py
todo-app/: Readme.md  custom_checkbox.py  main.py  run.py
