[tool.poetry]
name = "flet-l"
version = "0.1.0"
description = "Learning flet"
authors = ["spike <azamtoiri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.11.0"
flet-material = "^0.3.3"
captcha = "^0.5.0"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
